# rhodesli

./: .dockerignore  .env.example  .gitignore  .railwayignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  SESSION_LOG.md  SESSION_PLAN.md  plan.md  progress.txt  pyproject.toml  requirements-local.txt  requirements.txt  tasks.md
app/: audit_notes.md  (+3 more)
rhodesli_ml/: README.md  __init__.py  pyproject.toml
rhodesli_ml/analysis/: __init__.py  kinship_calibration.py  validate_birth_years.py
rhodesli_ml/artifacts/: calibration_v1.pt
rhodesli_ml/calibration/: __init__.py  data.py  evaluate.py  inference.py  model.py  train.py
rhodesli_ml/config/: base.yaml  calibration.yaml  date_estimation.yaml
rhodesli_ml/data/: __init__.py  augmentations.py  date_dataset.py  date_labels.json  date_labels.py  signal_harvester.py
rhodesli_ml/evaluation/: __init__.py  embedding_health.py  ranking_stability.py  regression_gate.py
rhodesli_ml/graph/: __init__.py  co_occurrence_graph.py  relationship_graph.py  social_graph.py
rhodesli_ml/importers/: __init__.py  enrichment.py  gedcom_matches.py  gedcom_parser.py  identity_matcher.py
rhodesli_ml/models/: __init__.py  date_classifier.py  registry.py  similarity_calibrator.py
rhodesli_ml/pipelines/: __init__.py  birth_year_estimation.py
rhodesli_ml/scripts/: add_manual_label.py  audit_temporal_consistency.py  batch_label.sh  clean_labels.py  compare_models.py  cost_tracker.py  export_onnx.py  export_search_metadata.py  generate_date_labels.py  generate_photo_metadata.py  run_birth_estimation.py  run_evaluation.py
(+1149 files in other folders)
