[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhodesli-ml"
version = "0.1.0"
description = "ML pipeline for Rhodesli heritage photo archive"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "pytorch-lightning>=2.0",
    "mlflow>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
]
gemini = [
    "google-genai>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rhodesli_ml*"]
